# aurora-app-player

./: .gitignore  README.md  pyproject.toml
src/: default.yaml.example
src/aurora_app_player/: __init__.py  __main__.py  config.py  queues.py
